--- a/search.html
+++ b/search.html
@@ -68,7 +68,7 @@
 
 
   <li class="navtree toctree-l2 inactive">
-    <a class="" href="./.">Overview</a>
+    <a class="" href="./README.md">Overview</a>
   </li>
         
       </ul>
