--- a/UnityAS/Inspect_Ini/index.html
+++ b/UnityAS/Inspect_Ini/index.html
@@ -75,7 +75,7 @@
 
 
   <li class="navtree toctree-l2 inactive">
-    <a class="" href="../../README.md">Overview</a>
+    <a class="" href="../..">Overview</a>
   </li>
         
       </ul>
