deploy: a26f8135bfd1441bb05fb50f4ebecee3d2f70f5b

--- a/UnityAS/Afterimage/index.html
+++ b/UnityAS/Afterimage/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Afterimage";
     var mkdocs_page_input_path = "UnityAS/Afterimage/README.md";
-    var mkdocs_page_url = "/UnityAS/Afterimage/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
