--- a/UnityAS/NovBundle/index.html
+++ b/UnityAS/NovBundle/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "NovBundle";
     var mkdocs_page_input_path = "UnityAS/NovBundle/README.md";
-    var mkdocs_page_url = "/UnityAS/NovBundle/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
