--- a/UnityAS/Afterimage/Details/index.html
+++ b/UnityAS/Afterimage/Details/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Details";
     var mkdocs_page_input_path = "UnityAS/Afterimage/Details.md";
-    var mkdocs_page_url = "/UnityAS/Afterimage/Details/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../../js/jquery-2.1.1.min.js" defer></script>
