--- a/UnityAS/Inspect_Html/index.html
+++ b/UnityAS/Inspect_Html/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Inspect Html";
     var mkdocs_page_input_path = "UnityAS/Inspect_Html/README.md";
-    var mkdocs_page_url = "/UnityAS/Inspect_Html/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
