--- a/UnityAS/Inspect_Yaml/index.html
+++ b/UnityAS/Inspect_Yaml/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Inspect_Yaml";
     var mkdocs_page_input_path = "UnityAS/Inspect_Yaml/README.md";
-    var mkdocs_page_url = "/UnityAS/Inspect_Yaml/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
