--- a/UnityAS/PackageExporter/index.html
+++ b/UnityAS/PackageExporter/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "PackageExporter";
     var mkdocs_page_input_path = "UnityAS/PackageExporter/README.md";
-    var mkdocs_page_url = "/UnityAS/PackageExporter/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
