--- a/UnityAS/sHierarchy/Details/index.html
+++ b/UnityAS/sHierarchy/Details/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Details";
     var mkdocs_page_input_path = "UnityAS/sHierarchy/Details.md";
-    var mkdocs_page_url = "/UnityAS/sHierarchy/Details/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../../js/jquery-2.1.1.min.js" defer></script>
