--- a/UnityAS/sHierarchy/index.html
+++ b/UnityAS/sHierarchy/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "sHierarchy";
     var mkdocs_page_input_path = "UnityAS/sHierarchy/README.md";
-    var mkdocs_page_url = "/UnityAS/sHierarchy/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="../../js/jquery-2.1.1.min.js" defer></script>
