--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     // Current page data
     var mkdocs_page_name = "Overview";
     var mkdocs_page_input_path = "README.md";
-    var mkdocs_page_url = "/";
+    var mkdocs_page_url = null;
   </script>
   
   <script src="js/jquery-2.1.1.min.js" defer></script>
