--- a/UnityAS/Inspect_Ini/Details/index.html
+++ b/UnityAS/Inspect_Ini/Details/index.html
@@ -245,6 +245,8 @@ Unity Engine.</p>
   <div role="contentinfo">
     <!-- Copyright etc -->
     
+      <p>(c) 2021 Pixisoft Inc. All rights reserved.</p>
+    
   </div>
 
   Built with <a href="http://www.mkdocs.org">MkDocs</a> using a <a href="https://github.com/snide/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
