--- a/UnityAS/PackageExporter/Details/index.html
+++ b/UnityAS/PackageExporter/Details/index.html
@@ -249,6 +249,8 @@ version 5.6 or above.</p>
   <div role="contentinfo">
     <!-- Copyright etc -->
     
+      <p>(c) 2021 Pixisoft Inc. All rights reserved.</p>
+    
   </div>
 
   Built with <a href="http://www.mkdocs.org">MkDocs</a> using a <a href="https://github.com/snide/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
