--- a/UnityAS/WatchLog/index.html
+++ b/UnityAS/WatchLog/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <meta name="author" content="pixisoft.tw@gmail.com">
+  <meta name="author" content="Pixisoft">
   <link rel="shortcut icon" href="../../etc/favicon.ico">
   
   <title>WatchLog - Pixisoft Documentation</title>
