deploy: ba7d8a020f9fd84883644373ef5c41191878fc20

--- a/UnityAS/PackageExporter/index.html
+++ b/UnityAS/PackageExporter/index.html
@@ -396,15 +396,15 @@ ProjectExporter
 </thead>
 <tbody>
 <tr>
-<td align="left"><code>-pkgName</code></td>
+<td align="left"><code>--name</code></td>
 <td align="left">Name of the exported pckage listed under unityignore directory.</td>
 </tr>
 <tr>
-<td align="left"><code>-pkgVersion</code></td>
+<td align="left"><code>--version</code></td>
 <td align="left">Version of the exported package.</td>
 </tr>
 <tr>
-<td align="left"><code>-pkgSavePath</code></td>
+<td align="left"><code>--savePath</code></td>
 <td align="left">Where to save the exported package.</td>
 </tr>
 </tbody>
