deploy: 86791484a88418268cb943f3355be28b4290ddc9

--- a/UnityAS/NovBundle/index.html
+++ b/UnityAS/NovBundle/index.html
@@ -457,7 +457,7 @@ user interface by using <strong>NovBundle</strong> -&gt; <strong>Upload</strong>
 </tr>
 <tr>
 <td align="left"><code>NovBundle.BatchMode.Upload</code></td>
-<td align="left"><code>--platform</code>, <code>--savePath</code>, <code>--host</code>, <code>--port</code></td>
+<td align="left"><code>--platform</code>, <code>--savePath</code>, <code>--host</code>, <code>--port</code>, <code>--username</code>, <code>--password</code>, <code>--privateKey</code>, <code>--passphrase</code>, <code>--workingPath</code>, <code>--versionFile</code>, <code>--version</code></td>
 <td align="left">Upload the asset bundles to the server through SFTP.</td>
 </tr>
 </tbody>
@@ -484,35 +484,35 @@ user interface by using <strong>NovBundle</strong> -&gt; <strong>Upload</strong>
 </tr>
 <tr>
 <td align="left"><code>--port</code></td>
-<td align="left">Optional port. (Default to 22)</td>
+<td align="left">Optional port number. (Default to 22)</td>
 </tr>
 <tr>
 <td align="left"><code>--username</code></td>
-<td align="left"></td>
+<td align="left">Username for login.</td>
 </tr>
 <tr>
 <td align="left"><code>--password</code></td>
-<td align="left"></td>
-</tr>
-<tr>
-<td align="left"><code>--passphrase</code></td>
-<td align="left"></td>
+<td align="left">Password for login.</td>
 </tr>
 <tr>
 <td align="left"><code>--privateKey</code></td>
-<td align="left"></td>
+<td align="left">Path points to your private key.</td>
+</tr>
+<tr>
+<td align="left"><code>--passphrase</code></td>
+<td align="left">Passphrase for your private key.</td>
 </tr>
 <tr>
 <td align="left"><code>--workingPath</code></td>
-<td align="left"></td>
+<td align="left">Target path from your server.</td>
 </tr>
 <tr>
 <td align="left"><code>--versionFile</code></td>
-<td align="left"></td>
+<td align="left">Version text file. (Default to <code>version.txt</code>)</td>
 </tr>
 <tr>
 <td align="left"><code>--version</code></td>
-<td align="left"></td>
+<td align="left">Version number apply to version text file. (Default to <code>1</code>)</td>
 </tr>
 </tbody>
 </table>
