--- a/UnityAS/PackageExporter/index.html
+++ b/UnityAS/PackageExporter/index.html
@@ -409,20 +409,24 @@ ProjectExporter
 <tr>
 <th align="left">Command</th>
 <th align="left">Details</th>
+<th align="center">Optional</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td align="left"><code>--name</code></td>
 <td align="left">Name of the exported package listed under unityignore directory.</td>
+<td align="center">❌</td>
 </tr>
 <tr>
 <td align="left"><code>--version</code></td>
 <td align="left">Version of the exported package.</td>
+<td align="center">❌</td>
 </tr>
 <tr>
 <td align="left"><code>--savePath</code></td>
 <td align="left">Where to save the exported package.</td>
+<td align="center">❌</td>
 </tr>
 </tbody>
 </table>
