deploy: 9c34b167712fa5a412e6422a705fa9c94dd9dad5

--- a/UnityAS/NovBundle/index.html
+++ b/UnityAS/NovBundle/index.html
@@ -426,7 +426,9 @@ the asset from the asset bundle you have created.</p>
 
 ...
 
-BundleDownloader.instance.BundleAsset(
+BundleDownloader bundleDownloader = ...;  // Assign bundle downloader here!
+
+bundleDownloader.BundleAsset(
     &quot;_bundle_1&quot;,  // Name of the bundle
     &quot;assets/_project/prefabs/sphere.prefab&quot;, (asset) =&gt;  // Target asset, and callback
 {
